fix(markdown-code-block-wrap): update to support auto wrap lines

--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -161,6 +161,12 @@ code {
 	font-family: Menlo, Monaco, Consolas, "Droid Sans Mono", "Courier New", monospace, "Droid Sans Fallback";
 	font-size: 1em;
 	line-height: 1.357em;
+    /*元素内的空白保留，并允许换行*/
+    white-space: pre-wrap !important;
+    /*是否允许在单词内断句*/
+    word-wrap: break-word !important;
+    /*强调怎么样断句*/
+    /*word-break: break-all !important;*/
 }
 
 body.wordWrap pre {
